# process-wrapper-rs

./: .gitignore  CROSS_COMPILATION.md  Cargo.toml  LICENSE  README.md  build-all.sh  build.rs
.cargo/: config.toml
.cursor/rules/: csharp-integration.mdc  ffi-interface.mdc  process-api.mdc  project-structure.mdc
.github/workflows/: build.yml
src/: ffi.rs  lib.rs  process.rs
test/: ffi_test.rs
tests/: ffi_test.rs  integration_test.rs  main.rs  process_test.rs
